context.main.filepath lost after undo #23456

Closed
opened 2010-08-22 23:32:02 +02:00 by Tom Edwards · 4 comments

%%%1. Open a saved file
2. Observe bpy.context.main.filepath
3. Perform an undo-able action
4. Undo
5. Observe bpy.context.main.filepath again

Filepath will be "memory" at step 5. This is particularly problematic when expanding relative paths!%%%

%%%1. Open a saved file 2. Observe bpy.context.main.filepath 3. Perform an undo-able action 4. Undo 5. Observe bpy.context.main.filepath again Filepath will be "memory<n>" at step 5. This is particularly problematic when expanding relative paths!%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Hi,

Confirmed here, Linux Slackware 13.1 64 bits.

Campbell, can you check this ?

  • Diego%%%
%%%Hi, Confirmed here, Linux Slackware 13.1 64 bits. Campbell, can you check this ? - Diego%%%

%%%fixed in svn r31566.%%%

%%%fixed in svn r31566.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#23456
No description provided.