bugfix [#23456] context.main.filepath lost after undo  G.sce was being restored after undo but not G.main->name  also changed reading a new file so G.main->name gets set to the startup.blend even if its not on the disk, not ideal but would set to <memory2> otherwise.